10May20=======================================================================
1. Added basic changes so that users *could* have multiple connections to the
   same node if it is allowed. This is work in progress and is there to see 
   if it deals with some networking problems encountered on very high volume
   sites which can see more than 1000 users (although the problems can occur
   with many hundreds or by the practices of certain ISPs). More information
   will be forthcoming if I get to the bottom of what's REALLY going on and
   whether this is (or maybe just one part of) the solution. It won't be 
   ready for general use until then.
2. Fixed the script import error reported by Joaquin (EA3CV?), by the simple
   expedient of restoring the version from the master branch. 
09May20=======================================================================
1. Show the route by which this PCxx came in progress debugging reports. In
   some other words: the spot/wwv/wcy/ann message arrived first from this 
   connection. 
2. Improve progress WWV & WCY messages.
3. Stop random node isolations (at least in one place)
08May20=======================================================================
1. Tidy up routing table
2. Add new argument to show/version (ALL or list of regexes) that allow you
   to see the version and build nos of all nodes on the system. 
07May20=======================================================================
1. Revert changes made since 25Apr concerning IP address reconciliation.
25Apr20=======================================================================
1. Add maximum no of users on node to show/cluster.
2. Add ability to show last n lines of debugging ring buffer.
3. Remove redundant wpxloc.dat file.
24Apr20=======================================================================
1. Add 'progress' debugging for showing that stuff is happening in nologchan
   a.k.a ringbuffer only mode. 